Fixing scrolling on iOS and adding app icon

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,10 +6,10 @@
 body {
     font-family: 'Open Sans', sans-serif;
     background: #939393;
-    max-height: 210px;
+    height: 100%;
     overflow: hidden;
-    padding: 0;
-    margin: 0;
+    width: 100%;
+    position: fixed;
 }
 
 
@@ -203,7 +203,16 @@ body {
     background: #3E4249;
     border: none;
     z-index: -1;
-    margin: -20px 0 0 -26px;
+    top: 0;
+    margin-top: -15px;
+}
+.controller .section-middle .select:before {
+    left: 0;
+    margin-left: -20px;
+}
+.controller .section-middle .start:before {
+    right: 0;
+    margin-right: -20px;
 }
 
 /*---------- Right Section ----------*/
